--- a/src/pages/main/components/middle/ReplyMessage.scss
+++ b/src/pages/main/components/middle/ReplyMessage.scss
@@ -9,6 +9,24 @@
   position: relative;
   cursor: pointer;
 
+  .sticker & {
+    max-width: 15rem;
+    padding: 0.5rem;
+    margin: 0;
+    background-color: white;
+    box-shadow: 0 1px 2px rgba(114, 114, 114, 0.25);
+
+    &::before {
+      left: 0.5rem;
+      top: 0.5rem;
+      bottom: 0.5rem;
+    }
+
+    .own & {
+      background-color: #EEFEDF;
+    }
+  }
+
   &::before {
     content: '';
     display: block;
@@ -16,7 +34,7 @@
     top: 0.25rem;
     bottom: 0.25rem;
     left: 0.25rem;
-    width: 0.125rem;
+    width: 2px;
     background: var(--color-primary);
 
     .own & {
@@ -25,16 +43,16 @@
   }
 
   &:hover {
-    background: rgba(var(--color-text-secondary-rgb), 0.08);
+    background-color: rgba(var(--color-text-secondary-rgb), 0.08);
   }
 
   .reply-text {
-    flex-grow: 1;
     overflow: hidden;
     margin-left: 0.4rem;
 
     .sender-name {
-      line-height: 0.875rem;
+      line-height: 1rem;
+      height: 1rem;
 
       .own & {
         color: var(--color-text-green);
@@ -46,8 +64,8 @@
       overflow: hidden;
       text-overflow: ellipsis;
       font-size: 0.875rem;
-      line-height: 1.25rem;
-      height: 1.25rem;
+      line-height: 1.125rem;
+      height: 1.125rem;
       margin-bottom: -0.125rem;
 
       &::after {
